# BacktestingFramework

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  ez-trading.spec  launcher.py  pyproject.toml
.githooks/: pre-commit
.github/workflows/: build-release.yml  ci.yml
configs/: default.yaml
data/: ez_trading.db.wal
data/cache/: cn_stock_daily.parquet  cn_stock_monthly.parquet  cn_stock_weekly.parquet  manifest.json  validation_report.json
docs/: README.md  v2.12-code-audit.md
docs/architecture/: governance.md  system-architecture.md
docs/audit/: 2026-04-12-codex-round5-review-request.md  2026-04-12-v2.19.0-round3-and-v2.20.0-p1a-codex-review.md  v2.11.1-full-audit.md  v2.11.1-post-release-audit.md  v2.13-readiness-audit.md
docs/core-changes/: 2026-04-10-engine-dividend-fix.md  portfolio-design.md  strategy-factor-management-design.md  v2.0-matcher-extraction.md  v2.11.1-design.md  v2.3-roadmap.md
docs/guide/: faq.md  features.md  installation.md  quick-start.md
docs/internal/: README.md  codex-review-prompt.md
ez/: __init__.py  config.py  errors.py  types.py
ez/agent/: CLAUDE.md  __init__.py  analyzer.py  assistant.py  batch_runner.py  candidate_search.py  code_gen.py  data_access.py  experiment_store.py  fdr.py  gates.py  hypothesis.py  loop_controller.py  prefilter.py  report.py  research_report.py  research_runner.py  research_store.py  run_spec.py  runner.py  sandbox.py  tools.py
ez/api/: CLAUDE.md  __init__.py  _live_helpers.py  _portfolio_helpers.py  app.py  deps.py
ez/backtest/: CLAUDE.md  __init__.py  engine.py  metrics.py  parallel.py  portfolio.py  significance.py  walk_forward.py
ez/core/: CLAUDE.md  __init__.py  _jit_fill.py  market_rules.py  matcher.py  ts_ops.py
ez/core/_cpp/: CMakeLists.txt  portfolio_rebalance.cpp  simulate_loop.cpp  ts_ops.cpp
ez/data/: CLAUDE.md  __init__.py  fundamental.py  provider.py  store.py  validator.py
ez/factor/: CLAUDE.md  __init__.py  base.py  evaluator.py
ez/live/: CLAUDE.md  __init__.py  _broker_order_links.py  _broker_pump.py  _qmt_projection.py  _snapshot_collectors.py  _utils.py  alert_dispatcher.py  allocation.py  broker.py  capital_policy.py  deploy_gate.py  deployment_spec.py  deployment_store.py  events.py  ledger.py  monitor.py  oms.py  optimizer_allocator.py  paper_broker.py  paper_engine.py  qmt_broker.py  qmt_host.py  qmt_session_owner.py  risk.py  scheduler.py
ez/llm/: CLAUDE.md  __init__.py  factory.py  openai_compat.py  provider.py
ez/portfolio/: CLAUDE.md  __init__.py  allocator.py  alpha_combiner.py  attribution.py  builtin_strategies.py  calendar.py  cross_evaluator.py  cross_factor.py  engine.py  ensemble.py  execution.py  index_data.py  loader.py  metrics.py  ml_alpha.py  ml_diagnostics.py  neutralization.py  optimizer.py  orthogonalization.py  portfolio_store.py  portfolio_strategy.py  risk_manager.py  universe.py  walk_forward.py
ez/research/: __init__.py  _metrics.py  context.py  pipeline.py  verdict.py
ez/strategy/: CLAUDE.md  __init__.py  base.py  loader.py
ez/testing/: __init__.py
ez_trading.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: bench_parallel.py  bench_parallel_heavy.py  benchmark.py  build_data_cache.py  build_installer.sh  deploy_a_bond_blend.py  deploy_daily_test.py  patch_adj_factor_from_jqdata.py  run_pytest_safe.sh  simulate_week_paper.py  start.sh  stop.sh  verify_data_vs_jqdata_local.py  verify_data_with_jqdata.py
strategies/: boll_macd_breakout.py  r_s_i_reversal.py  rsi_boll_reversal.py  rsi_extreme_threshold.py  rsi_oversold_reversal.py  rsi_reversal.py  rsi_reversal_v1.py
tests/: conftest.py  test_architecture.py  test_config.py  test_smoke.py  test_types.py
tests/fixtures/: sample_kline.csv
tests/mocks/: mock_provider.py
tests/test_agent/: test_analyzer.py  test_assistant.py  test_batch_runner.py  test_candidate_search.py  test_code_gen.py  test_data_access.py  test_experiment_store.py  test_fdr.py  test_hypothesis.py  test_loop_controller.py  test_ml_alpha_sandbox.py  test_prefilter.py  test_research_report.py  test_research_runner.py  test_research_store.py  test_run_spec.py  test_runner_gate.py  test_sandbox.py  test_sandbox_security_regressions.py  test_tools.py
tests/test_api/: test_app.py  test_auto_tick_loop.py  test_backtest_routes.py  test_candidates.py  test_code_api.py  test_code_registry.py  test_ensemble_api.py  test_experiments.py  test_fundamental_api.py  test_lifespan_cleanup.py  test_live_api.py  test_market_rule_gates.py  test_ml_alpha_api.py  test_portfolio_api.py  test_portfolio_search.py  test_portfolio_v210_api.py  test_research_api.py
web/: CLAUDE.md  README.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
(+287 files in other folders)
