[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "ez-trading"
version = "0.2.12"
description = "Agent-Native quantitative trading platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "duckdb>=1.0",
    "pandas>=2.2",
    "numpy>=2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "scipy>=1.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
tushare = ["tushare>=1.4"]
akshare = ["akshare>=1.14"]
all = ["tushare>=1.4", "akshare>=1.14"]

[tool.scikit-build]
wheel.packages = ["ez"]
build-dir = "build/{wheel_tag}"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"
